--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,11 +8,11 @@ edition = "2018"
 
 # [dependencies.corgi]
 # path = "../corgi"
-# features = [ "blas" ]
+# features = [ "blas", "f32" ]
 
 [dependencies]
 rand = "0.8.3"
-corgi = { version = "^0.8.6", features = [ "blas" ] }
+corgi = { version = "^0.9.1", features = [ "blas", "f32" ] }
 mnist = "0.4.1"
 
 [dev-dependencies]
