--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,14 +6,14 @@ edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
-# [dependencies.corgi]
-# path = "../corgi"
-# features = [ "openblas", "f32" ]
+[dependencies.corgi]
+path = "../corgi"
+features = [ "openblas", "f32" ]
 
 [dependencies]
 rand = "0.8.3"
 mimalloc = { version = "0.1.26", default-features = false }
-corgi = { version = "0.9.7", features = [ "openblas", "f32" ] }
+# corgi = { version = "0.9.7", features = [ "openblas", "f32" ] }
 mnist = "0.4.1"
 
 [dev-dependencies]
